// Vitest Snapshot v1

exports[`Notification > Notification baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <t-notification
    content="这是一条消息通知"
    theme="info"
    title="标题名称"
  />
  <t-notification
    content="这是一条消息通知（展示 5 秒后消失）"
    duration="5000"
    theme="info"
    title="标题名称"
  />
  <!---->
</t-space>
`;

exports[`Notification > Notification closeAllVue demo works fine 1`] = `
<t-space>
  <t-button
    variant="outline"
  >
    点击打开多个通知
  </t-button>
  <t-button
    id="t-demo-msg-close-all"
    variant="outline"
  >
    点击关闭所有通知
  </t-button>
</t-space>
`;

exports[`Notification > Notification closeVue demo works fine 1`] = `
<div
  data-v-6204336f=""
>
  <t-notification
    content="这是一条消息通知"
    data-v-6204336f=""
    title="自定义关闭按钮(false)"
  />
  <t-notification
    closebtn="关闭"
    content="这是一条消息通知"
    data-v-6204336f=""
    title="自定义关闭按钮(文字)"
  />
  <t-notification
    closebtn="function () { [native code] }"
    content="这是一条消息通知"
    data-v-6204336f=""
    title="自定义关闭按钮(函数)"
  />
  <t-notification
    content="这是一条消息通知"
    data-v-6204336f=""
    title="自定义关闭按钮(插槽)"
  >
    <template
      data-v-6204336f=""
    >
      x
    </template>
  </t-notification>
  <t-button
    data-v-6204336f=""
    variant="outline"
  >
    处理开关事件
  </t-button>
  <t-button
    data-v-6204336f=""
    variant="outline"
  >
    处理定时关闭事件（3s）
  </t-button>
  <!---->
  <!---->
</div>
`;

exports[`Notification > Notification contentVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <t-notification
    content="这是一条消息通知"
    title="自定义内容(字符串)"
  />
  <t-notification
    content="function () { [native code] }"
    title="自定义内容(函数)"
  />
  <t-notification
    title="自定义内容(插槽)"
  >
    <span>
      这是一条消息通知
    </span>
  </t-notification>
</t-space>
`;

exports[`Notification > Notification footerVue demo works fine 1`] = `
<div
  data-v-9ea0c098=""
>
  <t-notification
    content="这是一条消息通知"
    data-v-9ea0c098=""
    footer="function () { [native code] }"
    title="自定义底部详情(函数)"
  />
  <t-notification
    content="这是一条消息通知"
    data-v-9ea0c098=""
    title="自定义底部详情(插槽)"
  />
</div>
`;

exports[`Notification > Notification iconVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <t-notification
    content="这是一条普通的消息通知"
    theme="info"
    title="普通通知"
  />
  <t-notification
    content="这是一条危险的消息通知"
    theme="error"
    title="危险通知"
  />
  <t-notification
    content="这是一条告警的消息通知"
    theme="warning"
    title="告警通知"
  />
  <t-notification
    content="这是一条成功的消息通知"
    theme="success"
    title="成功通知"
  />
</t-space>
`;

exports[`Notification > Notification offsetVue demo works fine 1`] = `
<t-space
  size="10"
>
  <t-button
    variant="outline"
  >
    偏移的信息
  </t-button>
  <t-button
    variant="outline"
  >
    偏移的信息
  </t-button>
</t-space>
`;

exports[`Notification > Notification operationVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="24"
>
  <t-notification
    content="function () { [native code] }"
    footer="function () { [native code] }"
    theme="info"
    title="超出的文本省略号显示"
  />
  <t-notification
    close-btn="true"
    content="这是一条消息通知"
    theme="info"
    title="带关闭按钮"
  />
  <t-notification
    content="使用 function 自定义底部内容"
    footer="function () { [native code] }"
    theme="info"
    title="消息通知标题"
  />
  <t-notification
    content="1. 使用插槽自定义标题 2. 使用插槽自定义底部内容"
    theme="info"
  />
</t-space>
`;

exports[`Notification > Notification placementVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space
    direction="vertical"
  >
    <t-input
      placeholder="请输入横向偏移量"
    />
    <t-input
      placeholder="请输入纵向偏移量"
    />
  </t-space>
  <t-space
    size="30"
  >
    <t-space
      direction="vertical"
      size="30"
    >
      <t-button
        variant="outline"
      >
        左上角
      </t-button>
      <t-button
        variant="outline"
      >
        左下角
      </t-button>
    </t-space>
    <t-space
      direction="vertical"
      size="30"
    >
      <t-button
        variant="outline"
      >
        右上角
      </t-button>
      <t-button
        variant="outline"
      >
        右下角
      </t-button>
    </t-space>
  </t-space>
</t-space>
`;

exports[`Notification > Notification pluginVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="42"
>
  <t-space
    direction="vertical"
  >
    <p>
      插件调用
    </p>
    <t-space>
      <t-button
        variant="outline"
      >
        1000ms
      </t-button>
      <t-button
        variant="outline"
      >
        2000ms
      </t-button>
      <t-button
        variant="outline"
      >
        默认时长
      </t-button>
      <t-button
        variant="outline"
      >
         永久显示 
      </t-button>
    </t-space>
  </t-space>
  <t-space
    direction="vertical"
  >
    <p>
      函数调用
    </p>
    <t-space>
      <t-button
        variant="outline"
      >
        info
      </t-button>
      <t-button
        variant="outline"
      >
        success
      </t-button>
      <t-button
        variant="outline"
      >
        warning
      </t-button>
      <t-button
        variant="outline"
      >
        error
      </t-button>
    </t-space>
  </t-space>
</t-space>
`;

exports[`Notification > Notification sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <t-notification
    content="这是一条消息通知"
    title="宽度固定400px"
  />
  <t-notification
    content="这是一条内容为******************************
      ****************************************************
      ****************************************************
      *********************的消息通知"
    title="文本内容最多支持三行"
  />
</t-space>
`;

exports[`Notification > Notification toggleVue demo works fine 1`] = `
<t-space
  data-v-293420ed=""
>
  <t-button
    data-v-293420ed=""
    variant="outline"
  >
    自由控制关闭时机（打开）
  </t-button>
</t-space>
`;

exports[`Notification > Notification type4FnVue demo works fine 1`] = `
<t-space
  size="10"
>
  <t-button
    variant="outline"
  >
    信息
  </t-button>
  <t-button
    variant="outline"
  >
    成功
  </t-button>
  <t-button
    variant="outline"
  >
    警告
  </t-button>
  <t-button
    variant="outline"
  >
    错误
  </t-button>
</t-space>
`;

exports[`Notification > Notification typeVue demo works fine 1`] = `
<div
  data-v-0500de13=""
>
  <t-notification
    content="这是一条消息通知"
    data-v-0500de13=""
    theme="info"
    title="信息"
  />
  <t-notification
    content="这是一条消息通知"
    data-v-0500de13=""
    theme="success"
    title="成功"
  />
  <t-notification
    content="这是一条消息通知"
    data-v-0500de13=""
    theme="warning"
    title="警告"
  />
  <t-notification
    content="这是一条消息通知"
    data-v-0500de13=""
    theme="error"
    title="错误"
  />
</div>
`;
